@@ -2890,6 +2890,11 @@ specifier|final
 name|int
 name|shortCircuitSharedMemoryWatcherInterruptCheckMs
 decl_stmt|;
+DECL|field|shortCircuitMmapEnabled
+specifier|final
+name|boolean
+name|shortCircuitMmapEnabled
+decl_stmt|;
 DECL|field|shortCircuitMmapCacheSize
 specifier|final
 name|int
@@ -3468,6 +3473,21 @@ argument_list|,
 name|DFSConfigKeys
 operator|.
 name|DFS_CLIENT_READ_SHORTCIRCUIT_STREAMS_CACHE_EXPIRY_MS_DEFAULT
+argument_list|)
+expr_stmt|;
+name|shortCircuitMmapEnabled
+operator|=
+name|conf
+operator|.
+name|getBoolean
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_MMAP_ENABLED
+argument_list|,
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_MMAP_ENABLED_DEFAULT
 argument_list|)
 expr_stmt|;
 name|shortCircuitMmapCacheSize
