@@ -3412,6 +3412,24 @@ name|DFS_CLIENT_DOMAIN_SOCKET_DATA_TRAFFIC_DEFAULT
 init|=
 literal|false
 decl_stmt|;
+DECL|field|DFS_CLIENT_MMAP_ENABLED
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DFS_CLIENT_MMAP_ENABLED
+init|=
+literal|"dfs.client.mmap.enabled"
+decl_stmt|;
+DECL|field|DFS_CLIENT_MMAP_ENABLED_DEFAULT
+specifier|public
+specifier|static
+specifier|final
+name|boolean
+name|DFS_CLIENT_MMAP_ENABLED_DEFAULT
+init|=
+literal|true
+decl_stmt|;
 DECL|field|DFS_CLIENT_MMAP_CACHE_SIZE
 specifier|public
 specifier|static
