@@ -7476,13 +7476,28 @@ block|}
 name|ByteBuffer
 name|buffer
 init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|dfsClient
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|shortCircuitMmapEnabled
+condition|)
+block|{
+name|buffer
+operator|=
 name|tryReadZeroCopy
 argument_list|(
 name|maxLength
 argument_list|,
 name|opts
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|buffer
