@@ -81,6 +81,38 @@ import|;
 end_import
 
 begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_MMAP_ENABLED
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_MMAP_CACHE_SIZE
+import|;
+end_import
+
+begin_import
 import|import
 name|java
 operator|.
@@ -4731,6 +4763,416 @@ argument_list|,
 literal|60000
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testClientMmapDisable ()
+specifier|public
+name|void
+name|testClientMmapDisable
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|HdfsConfiguration
+name|conf
+init|=
+name|initZeroCopyTest
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|DFS_CLIENT_MMAP_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+literal|null
+decl_stmt|;
+specifier|final
+name|Path
+name|TEST_PATH
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/a"
+argument_list|)
+decl_stmt|;
+specifier|final
+name|int
+name|TEST_FILE_LENGTH
+init|=
+literal|16385
+decl_stmt|;
+specifier|final
+name|int
+name|RANDOM_SEED
+init|=
+literal|23453
+decl_stmt|;
+specifier|final
+name|String
+name|CONTEXT
+init|=
+literal|"testClientMmapDisable"
+decl_stmt|;
+name|FSDataInputStream
+name|fsIn
+init|=
+literal|null
+decl_stmt|;
+name|DistributedFileSystem
+name|fs
+init|=
+literal|null
+decl_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_CONTEXT
+argument_list|,
+name|CONTEXT
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+comment|// With DFS_CLIENT_MMAP_ENABLED set to false, we should not do memory
+comment|// mapped reads.
+name|cluster
+operator|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|fs
+operator|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|createFile
+argument_list|(
+name|fs
+argument_list|,
+name|TEST_PATH
+argument_list|,
+name|TEST_FILE_LENGTH
+argument_list|,
+operator|(
+name|short
+operator|)
+literal|1
+argument_list|,
+name|RANDOM_SEED
+argument_list|)
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|waitReplication
+argument_list|(
+name|fs
+argument_list|,
+name|TEST_PATH
+argument_list|,
+operator|(
+name|short
+operator|)
+literal|1
+argument_list|)
+expr_stmt|;
+name|fsIn
+operator|=
+name|fs
+operator|.
+name|open
+argument_list|(
+name|TEST_PATH
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|fsIn
+operator|.
+name|read
+argument_list|(
+literal|null
+argument_list|,
+literal|1
+argument_list|,
+name|EnumSet
+operator|.
+name|of
+argument_list|(
+name|ReadOption
+operator|.
+name|SKIP_CHECKSUMS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|fail
+argument_list|(
+literal|"expected zero-copy read to fail when client mmaps "
+operator|+
+literal|"were disabled."
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UnsupportedOperationException
+name|e
+parameter_list|)
+block|{       }
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|fsIn
+operator|!=
+literal|null
+condition|)
+name|fsIn
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|fs
+operator|!=
+literal|null
+condition|)
+name|fs
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|cluster
+operator|!=
+literal|null
+condition|)
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+name|fsIn
+operator|=
+literal|null
+expr_stmt|;
+name|fs
+operator|=
+literal|null
+expr_stmt|;
+name|cluster
+operator|=
+literal|null
+expr_stmt|;
+try|try
+block|{
+comment|// Now try again with DFS_CLIENT_MMAP_CACHE_SIZE == 0.  It should work.
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|DFS_CLIENT_MMAP_ENABLED
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFS_CLIENT_MMAP_CACHE_SIZE
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_CONTEXT
+argument_list|,
+name|CONTEXT
+operator|+
+literal|".1"
+argument_list|)
+expr_stmt|;
+name|cluster
+operator|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|fs
+operator|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|createFile
+argument_list|(
+name|fs
+argument_list|,
+name|TEST_PATH
+argument_list|,
+name|TEST_FILE_LENGTH
+argument_list|,
+operator|(
+name|short
+operator|)
+literal|1
+argument_list|,
+name|RANDOM_SEED
+argument_list|)
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|waitReplication
+argument_list|(
+name|fs
+argument_list|,
+name|TEST_PATH
+argument_list|,
+operator|(
+name|short
+operator|)
+literal|1
+argument_list|)
+expr_stmt|;
+name|fsIn
+operator|=
+name|fs
+operator|.
+name|open
+argument_list|(
+name|TEST_PATH
+argument_list|)
+expr_stmt|;
+name|ByteBuffer
+name|buf
+init|=
+name|fsIn
+operator|.
+name|read
+argument_list|(
+literal|null
+argument_list|,
+literal|1
+argument_list|,
+name|EnumSet
+operator|.
+name|of
+argument_list|(
+name|ReadOption
+operator|.
+name|SKIP_CHECKSUMS
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|fsIn
+operator|.
+name|releaseBuffer
+argument_list|(
+name|buf
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|fsIn
+operator|!=
+literal|null
+condition|)
+name|fsIn
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|fs
+operator|!=
+literal|null
+condition|)
+name|fs
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|cluster
+operator|!=
+literal|null
+condition|)
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
